syntax = "proto3";

// Definisce il package Go dove verrà generato il codice.
option go_package = "github.com/ANGEL0CADUTO/IDS_project/proto";

package proto;

// Il servizio che il Data Collector espone.
service MetricsCollector {
  // Un semplice RPC per inviare un singolo dato metrico.
  rpc SendMetric(Metric) returns (CollectorResponse);
}

// Messaggio che rappresenta una singola metrica.
message Metric {
  string source_client_id = 1;
  string type = 2;
  double value = 3; // Possiamo tenerlo per metriche semplici
  int64 timestamp = 4;
  repeated float features = 5; // <-- NUOVO CAMPO: un array di float
}

// Risposta dal collector.
message CollectorResponse {
  bool accepted = 1;            // True se il dato è stato accettato
  string message = 2;           // Messaggio di stato
}